--- a/index.html
+++ b/index.html
@@ -1,1 +1,15 @@
-felipealfonsog.github.io
+<html>
+    <head>
+    <title></title>
+    <script type="text/javascript">
+        <!--
+	window.location = "https://freeshell.de/~felipe/"
+        //-->
+        </script>
+	        <!-- https://freeshell.de/~felipe/ -->
+        </head>
+        <body>
+
+        </body>
+</html>
+
