--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <html>
     <head>
-    <title></title>
+    <title>Felipe Alfonso González - Github</title>
     <script type="text/javascript">
         <!--
-	window.location = "https://freeshell.de/~felipe/"
+	window.location = "https://github.com/felipealfonsog"
         //-->
         </script>
 	        <!-- https://freeshell.de/~felipe/ -->
